# moldura

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: config.rs  lib.rs  prelude.rs  ratatui.rs  theme.rs
